--- a/docs/portada.css
+++ b/docs/portada.css
@@ -10,19 +10,24 @@ nav {
     color: white;
     padding: 10px 20px;
     text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 nav a {
     color: white;
     text-decoration: none;
     margin: 0 15px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s;
 }
 
 nav a:hover {
     text-decoration: underline;
 }
 
-h1, p, ul {
+h1, h2, p, ul {
     margin: 20px;
     padding: 0;
 }
@@ -51,4 +56,14 @@ ul li a {
 
 ul li a:hover {
     text-decoration: underline;
+}
+
+footer{
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    
+    bottom: 0;
+    width: 100%;
 }
